--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,6 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
@@ -114,16 +113,24 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <organization>
         <name>EPAM Systems</name>
         <url>http://epam.com</url>
     </organization>
+
     <issueManagement>
         <system>GIT</system>
         <url>https://git.epam.com/yuriy_tkach/spring-core-hometask-skeleton/issues</url>
