--- a/src/main/resources/medium.properties
+++ b/src/main/resources/medium.properties
@@ -1,3 +1,3 @@
-medium.name=Medium
-medium.numberOfSeats=75
-medium.vipSeats=20,21,22,23,24,25,26,27,28,29
+name=Medium
+numberOfSeats=75
+vipSeats=20,21,22,23,24,25,26,27,28,29
